Rev0, beginning Rev1

--- a/Gibbs_Application/Rev0/Gibbs_Data_Search.ipynb
+++ b/Gibbs_Application/Rev0/Gibbs_Data_Search.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,36 @@
     "search_btn = driver.find_element_by_id('SearchButton')\n",
     "id_box.send_keys(formula)\n",
     "search_btn.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_btn = driver.find_element_by_link_text('Condensed phase thermochemistry data')\n",
+    "\n",
+    "data_btn.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "https://webbook.nist.gov/cgi/cbook.cgi?ID=C12137201&Units=SI&Mask=2#Thermo-Condensed\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = driver.current_url\n",
+    "\n",
+    "print(url)"
    ]
   },
   {
